<resources>
    <string name="app_name">Walhalla</string>
    <string name="abort">Abbrechen</string>
    <string name="send">Senden</string>
    <string name="wappen_desc">Wappen der Verbindung</string>
    <string name="backgroundImage" translatable="false">BackgroundImage</string>
    <string name="maps_api_key_2">AIzaSyBkZmfoEvjUrG1ujh_MLMsaVuSxdpv1_Wg</string>
    <string name="msg_token_fmt" translatable="false">fbm</string>
    <string name="save">Speichern</string>
    <string name="later">Später</string>
    <string name="edit">Bearbeiten</string>
    <string name="done">Fertig</string>
    <string name="title">Titel</string>
    <string name="description">Beschreibung</string>
    <string name="take_photo">Foto machen</string>
    <string name="choose_photo">Foto auswählen</string>
    <string name="choose_picture">Bild auswählen</string>
    <string name="exit_app_via_back">Nochmaliges Tippen beendet die App.</string>
    <string name="go_back">Zurück</string>
    <string name="semester" translatable="false">Semester</string>
    <string name="delete">Löschen</string>
    <string name="upload_no_change_necessary">Keine Veränderungen gefunden.</string>
    <string name="tasks">Aufgaben</string>
    <string name="search">Suchen…</string>
    <string name="nothing_yet">Noch passiert hier nichts.</string>
    <string name="CloneNotSupportedException_Error" translatable="false">CloneNotSupportedException in ProfileFragment in constructor</string>
    <string name="clock">Uhr</string>
    <string name="time_at">um</string>
    <string name="attention">Achtung!</string>
    <string name="sure">Sicher</string>
    <string name="yes">Ja</string>
    <string name="abort_sure">Wirklich abrechen?</string>
    <string name="ok" translatable="false">OK</string>
    <string name="no">Nein</string>
    <string name="back">Zurück</string>
    <string name="next">Weiter</string>
    <string name="ws">Wintersemester</string>
    <string name="ss">Sommersemester</string>
    <string name="upload_complete">Daten erfolgreich hochgeladen</string>
    <string name="of">des</string>
    <string name="program">Programm</string>
    <string name="uid">User id generated by FirebaseAuth</string>
    <string name="default_notification_channel_id" translatable="false">default_channel</string>
    <string name="item_news_image_description" translatable="false">Image to the Entry</string>
    <string name="navigation_drawer_open" translatable="false">Open Navigation Drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close Navigation Drawer</string>
    <string name="menu_beer">Bier</string>
    <string name="menu_home">Start</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_contacts">Kartei</string>
    <string name="menu_donation">Spenden</string>
    <string name="menu_login">Login</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_register">Registrieren</string>
    <string name="menu_program">Semesterprogramm</string>
    <string name="menu_chargen">Vorstand der Aktivitas</string>
    <string name="menu_chargen_phil">Philistervorstand</string>
    <string name="menu_user">Nutzer</string>
    <string name="menu_boobies_event">Damenveranstaltung</string>
    <string name="menu_fuxenstunde">Fuxenstunde</string>
    <string name="menu_transcript">Protokoll</string>
    <string name="menu_new_person">Neue Person</string>
    <string name="menu_kartei">Kartei</string>
    <string name="menu_account">Kasse</string>
    <string name="menu_remember">Zahlungserinnerungen</string>
    <string name="menu_beer_invoice">Bierabrechnung</string>
    <string name="menu_beer_buy">Biereinkauf</string>
    <string name="menu_beer_price">Bierpreis</string>
    <string name="menu_drive">Fahrten</string>
    <string name="menu_lecture">Vortrag</string>
    <string name="menu_budget_plan">Budgetplanung</string>
    <string name="menu_end_semester">Kassenschluss</string>
    <string name="menu_messages">Neuigkeiten</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_donate">Spenden</string>
    <string name="menu_other">Sonstiges</string>
    <string name="menu_board_only">Für Chargen</string>
    <string name="menu_intern">Intern</string>
    <string name="menu_user_editing">Nutzerverwaltung</string>
    <string name="menu_profile_edit">Profil bearbeiten</string>
    <string name="menu_profile_add">Eine neue Person hinzufügen</string>
    <string name="menu_chargen_bottom">Vorstand</string>
    <string name="menu_share">Social Media</string>
    <string name="menu_program_short">Programm</string>
    <string name="menu_new_semester">Semester bearbeiten</string>
    <string name="home_title">Herzlich willkommen!</string>
    <string name="home_text">"Liebe Bundesbrüder, werte Kartellbrüder, verehrte Damen und liebe Leser, Die Aktivitas des K.St.V. Walhalla freut sich, ihren lieben Alten Herren, ihren Kartell- und Bundesbrüdern sowie ihren sehr geehrten Gästen und treuen Freunden das Programm für das Wintersemester 2020/21 überreichen zu können. Als Verein, welcher aus Akademikern und angehenden Hochschulabsolventen besteht, halten wir die Wissenschaft in allen Ehren und unterstützen uns gegenseitig so gut es geht beim Gewinnen von neuem Wissen. Leider konnten wir in diesem Semester dank Corona keinen Vortrag organisieren. Auch die Freundschaft muss in Zeiten der Isolation fortbestehen können und gepflegt werden, weshalb die Bundesbrüder Walhallae nicht nur während des Semesters, sondern das ganze Jahr über zusammenhalten und sich nach besten Kräften gegenseitig unterstützen. Der Glaube und das Vertrauen in Gott sind essenzielle Teile unseres Lebens und der Verbindung. Gerade in diesen belastenden und mit Sorge gefüllten Tagen hoffen wir auf eine intensive Wahrnehmung des bestehenden Angebots und laden unsere lieben Alten Herren, die sehr verehrten Damen und alle interessierten Abiturienten und Studenten ein, an unseren Veranstaltungen teilzunehmen. In der Hoffnung, dass gemäß unseren Prinzipien religio – scientia – amicitia jedem etwas geboten wird, verbleibe ich mit einem Kraftvollem: Vivat, crescat, floreat Walhalla ad multos annos! "</string>
    <string name="home_2">Wir sind eine katholische Korporation von Studenten aller Fachrichtungen. Wir haben uns zusammengefunden, um gemeinsam zu lernen, zu studieren und zu feiern. Auf dem Walhallahaus in der Mergentheimer Straße 32 hören wir Vorträge, treffen uns zu Federweißerabenden oder traditionellen Kneipen, spielen Tennis und feiern Feste. Uns verbindet die Orientierung an den Grundsätzen Religion, Wissenschaft und Freundschaft. Deshalb haben wir uns in einem starken Dachverband zusammengeschlossen: dem Kartellverband katholischer deutscher Studentenvereine (KV). Diesem gehören über 80 aktive Vereine an mehr als 40 Hochschulen in ganz Deutschland an. Aus unserer christlichen Tradition heraus lehnen wir das Schlagen von Mensuren (auch bekannt als \"Fechten\") ab. Neugierig geworden? Dann solltest du nicht lange zögern! Kontaktiere uns und lerne uns auf einer unserer Veranstaltungen oder auch beim gemeinsamen Fußballschauen auf dem Walhallahaus in der Mergentheimer Straße 32 kennen.</string>
    <string name="footer_helper">Die IBAN wird beim anklicken in die Zwischenablage kopiert.</string>
    <string name="footer_sub_1_title">Konto der Aktivitas</string>
    <string name="footer_sub_1_content" translatable="false">DE10 7509 0300 0103 0118 10</string>
    <string name="footer_sub_2_title" translatable="false">Hausbauverein Walhalla e.V.</string>
    <string name="footer_sub_2_content" translatable="false">DE80 7905 0000 0000 0679 59</string>
    <string name="footer_sub_3_title" translatable="false">K.St.V. Walhalla</string>
    <string name="footer_sub_3_content" translatable="false">DE50 7905 0000 0000 2099 57</string>
    <string name="footer_sub_4_title">Spendenkonto Hausbau</string>
    <string name="footer_sub_4_content" translatable="false">DE39 7905 0000 0047 3816 11</string>
    <string name="footer_copy_aktivenkonto">Aktivenkonto kopiert</string>
    <string name="footer_copy_hbvkonto" translatable="false">Konto des Hausbauvereins kopiert</string>
    <string name="footer_copy_kstvkonto" translatable="false">Konto des K.St.V. Walhalla kopiert</string>
    <string name="footer_copy_hbvdonatekonto" translatable="false">Das Spendenkonto des Hausbauvereins kopiert</string>
    <string name="description_zoom_touch_close">Tippen zum schließen</string>
    <string name="charge_x">Senior</string>
    <string name="charge_vx">Consenior</string>
    <string name="charge_fm">Fuxmajor</string>
    <string name="charge_xx">Schriftführer</string>
    <string name="charge_xxx">Kassier</string>
    <string name="dialog_chargen_title">Ein neues Chargenkabinett hinzufügen</string>
    <string name="dialog_chargen_edit">Chargen bearbeiten</string>
    <string name="charge_from">aus </string>
    <string name="chargen_add">Neue Charge auswählen</string>
    <string name="login_username">Nutzername</string>
    <string name="login_password">Passwort</string>
    <string name="login_sign_in">Login</string>
    <string name="login_cancel">Abbrechen</string>
    <string name="close">Schließen</string>
    <string name="login_empty">Nutzername/Passwort leer</string>
    <string name="login_error">Diese kombination aus Nutzername und Passwort ist nicht bekannt.</string>
    <string name="login_success">Login erfolgreich</string>
    <string name="login_logout_successful">Erfolgreich Abgemeldet</string>
    <string name="login_loading">Laden…</string>
    <string name="frat_adress" translatable="false">Mergentheimer Straße 32</string>
    <string name="frat_name" translatable="false">K.St.V. Walhalla im KV</string>
    <string name="frat_city" translatable="false">97072 Würzburg</string>
    <string name="messages_open_dialog">Hinzufügen</string>
    <string name="messages_dialog_first">Titel</string>
    <string name="messages_dialog_second">Inhalt</string>
    <string name="profile_name" translatable="false">Name</string>
    <string name="profile_address">Adresse</string>
    <string name="profile_dob">Geburtstag</string>
    <string name="profile_e_mail">E-Mail</string>
    <string name="profile_rank">Rang</string>
    <string name="profile_joined">Beitrittssemester</string>
    <string name="profile_picture">Bild</string>
    <string name="profile_pob">Herkunftsort</string>
    <string name="program_add">Neue Veranstaltung</string>
    <string name="profile_general_information">Allgemeine Informationen</string>
    <string name="profile_general_information_description">Einige Informationen sind möglicherweise für andere Personen sichtbar, die ebenfalls die App verwenden.</string>
    <string name="profile_personal_data">Persönliche Daten</string>
    <string name="profile_contact_information_title">Kontaktdaten</string>
    <string name="profile_major_2">Studium</string>
    <string name="profile_phone">Telefon</string>
    <string name="profile_fraternity_information_title">Informationen zum Verbindungsstatus</string>
    <string name="profile_picture_edit_add">Hier kann das Bild bearbeitet werden. Dieses wird für neue Ämter und die Ahnengallerie verwendet.</string>
    <string name="messages_public">Öffentliche Mitteilung</string>
    <string name="messages_internal">Interne Mitteilung</string>
    <string name="messages_add_link">Link(s) hinzufügen</string>
    <string name="program_show_private_events">Interne Veranstaltungen</string>
    <string name="program_show_draft">Vorschau Anzeigen</string>
    <string name="program_show_public_events">Öffentliche Veranstaltungen</string>
    <string name="select_image">Ein Bild auswählen</string>
    <string name="messages_dialog">Neue Mitteilung</string>
    <string name="send_public">Öffentlich</string>
</resources>