<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_chargen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/semester" />

        <Button
            android:id="@+id/dialog_chargen_semester"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/charge_x" />

        <Button
            android:id="@+id/dialog_chargen_senior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/charge_vx" />

        <Button
            android:id="@+id/dialog_chargen_consenior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/charge_fm" />

        <Button
            android:id="@+id/dialog_chargen_fuxmajor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/charge_xx" />

        <Button
            android:id="@+id/dialog_chargen_scriptor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/charge_xxx" />

        <Button
            android:id="@+id/dialog_chargen_kassier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </TableRow>

</TableLayout>