<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/news_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:paddingStart="6dp"
            android:paddingEnd="16dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_close"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/messages_dialog" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="4dp"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/background">

            <EditText
                android:id="@+id/news_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/messages_dialog_first"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingBottom="10dp"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/background">

            <EditText
                android:id="@+id/news_content"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/messages_dialog_second"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:paddingBottom="10dp"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/news_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/select_image"
            android:scaleType="fitCenter"
            android:src="@drawable/wappen_2017" />

        <LinearLayout
            android:padding="4dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messages_public"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/news_switch"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messages_internal"/>
        </LinearLayout>

        <Button
            android:id="@+id/news_links"
            android:layout_marginTop="10dp"
            style="@style/History.Button"
            android:layout_gravity="center"
            android:text="@string/messages_add_link" />

        <Button
            android:id="@+id/news_send"
            style="@style/History.Button"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:text="@string/send_public" />

    </LinearLayout>


</LinearLayout>
